# Berkeley-Humanoid

./: .gitmodules  world.py
Berkeley-Humanoid-Lite/: run_play.sh  run_train.sh
Berkeley-Humanoid-Lite/scripts/rsl_rl/: play.py  playNew.py  train.py
Berkeley-Humanoid-Lite/source/berkeley_humanoid_lite_assets/: pyproject.toml
Berkeley-Humanoid-Lite/source/berkeley_humanoid_lite_assets/.github/workflows/: release.yml
Berkeley-Humanoid-Lite/source/berkeley_humanoid_lite_assets/data/robots/berkeley_humanoid/berkeley_humanoid_lite/mjcf/: berkeley_humanoid_lite.xml  berkeley_humanoid_lite_biped.xml  bhl_scene.xml  config.json
Berkeley-Humanoid-Lite/source/berkeley_humanoid_lite_assets/scripts/: convert_urdf_to_usd.py  export_onshape_to_mjcf.py  export_onshape_to_urdf.py
