[project]
name = "berkeley_humanoid_lite_assets"
version = "2025.09.07"
description = "Description files for Berkeley Humanoid Lite"
authors = [
    { name = "Berkeley Humanoid Project Developers" },
    { name = "-T.K.-" },
]
maintainers = [
    { name = "Berkeley Humanoid Project Developers" },
    { name = "-T.K.-" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["robotics", "isaaclab"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "onshape-to-robot",
    "pymeshlab==2023.12.post3",
]

[project.urls]
repository = "https://github.com/HybridRobotics/Berkeley-Humanoid-Lite-Assets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["berkeley_humanoid_lite_assets"]
